xfsprogs-2.2.1 (09 August 2002)
	- Fix buglet in libdisk get_driver_block_major() routine which
	  would result in incorrect majors being returned for not-found
	  drivers.
	- Fix problem in install process with newer autoconf versions.

xfsprogs-2.2.0 (08 August 2002)
	- mkfs.xfs defaults to a blocksize of 4096 bytes, and no longer
	  uses getpagesize(2) to dynamically configure the default size.
	- Add EVMS stripe unit/width auto-detection support in mkfs.xfs
	  (patch from Luciano Chavez).
	- Sync user/kernel headers (arch.h incorporated into xfs_arch.h,
	  and several other minor changes).

xfsprogs-2.1.2 (17 July 2002)
	- Fix up log stripe unit specification options, and update
	  man page.  Also fix suffix handling for data su/sw options
	  (disallow unit suffixes on -d sunit,swidth,sw and -l sunit).
	  Add "s" (512-byte sectors) as valid suffix.
	- Automatically select v2 logs if a log stripe unit is
	  specified.

xfsprogs-2.1.1 (04 July 2002)
	- Build infrastructure updates so that configure options can be
	  used to specify paths rather than semi-hard-coded path names
	  controlled by the ROOT/ROOT_PREFIX environment variables; eg.
	  now allows /lib64 and /lib32

xfsprogs-2.1.0 (14 June 2002)
	- Support for XFS version 2 log format.
	- Fix for xfs_repair mangling i8count for dir2_sf directories
	- Minor mkfs.xfs man page update for blocksize limits on Linux
	- xfs_cred.h split into xfs_acl.h, xfs_cap.h and xfs_mac.h
	- Fix typo in mkfs realtime summary inode alloc failure message

xfsprogs-2.0.6 (30 May 2002)
	- Fix error returns from log recovery (affects xfs_repair).
	- Fix the way mkfs.xfs round downs the device when the last 
	  AG is smaller than the minimum AG size.
	- Fix bug in xfs_repair da_write() routine, which affects
	  filesystems where the data blocksize != naming blocksize
	  (see xfs_info output).
	- Fix a use-after-free bug in xfs_repair code for checking
	  version 1 btree-format directories.